welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:34: error: ')' expected but 'else' found.
		} else {
                  ^